--- a/CSS/News.css
+++ b/CSS/News.css
@@ -9,7 +9,7 @@ section#main {
 
 #main h1 {
     color: orange;
-    margin-top: 250px;
+    margin-top: 175px;
     font-size: 3rem;
     margin-bottom: 1rem;
 }
@@ -29,7 +29,19 @@ section#main {
     margin-bottom: 20px;
 }
 
-.tiktok-embed {
+.twitter-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px;
+}
+
+.twitter-tweet {
+  max-width: 300px;
+  flex: 1;
+  margin: 0;
+  padding: 10px;
 }
 
 @media (max-width: 1200px) {
@@ -41,4 +53,3 @@ section#main {
     display: block;
   }
 }
-
