--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,4 +1,3 @@
-/* Your existing styles */
 section#main {
     height: calc(100vh - 50vh);
     display: flex;
@@ -9,6 +8,17 @@ section#main {
 }
 
 #main h1 {
+    margin-top: 250px;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-size: 3rem; /* Maintain the original font size */
+    color: #4aa8c5; /* Set the main text color */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Add a subtle shadow for depth */
+    font-weight: bold; /* Make the text bold for emphasis */
+    text-align: center; /* Center the text */
+}
+
+h1 {
     margin-top: 250px;
     font-size: 3rem;
     margin-bottom: 1rem;
@@ -39,8 +49,8 @@ section#main {
 }
 
 .join {
-    width: 200px;
-    height: 75px;
+    width: 300px;
+    height: 100px;
     border-color: #5db354;
     border-style: solid;
     border-radius: 10px;
@@ -62,20 +72,15 @@ section#main {
     scale: 0.8;
 }
 
-iframe {
-    display: block;
-    margin: 0 auto;
-    margin-top: 150px;
-}
-
 /* Countdown styling updates */
 .countdown-container {
-    margin-top: 50px;
+    margin-top: 500px;
     text-align: center;
     color: #fff;
 }
 
 .countdown {
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     font-size: 2.5rem; /* Adjusted to fit better */
@@ -96,7 +101,10 @@ iframe {
 
 .label {
     font-size: 1.2rem;
-    color: #fff;
+    color: #4aa8c5; /* Set the main text color */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Add a subtle shadow for depth */
+    font-weight: bold; /* Make the text bold for emphasis */
+    text-align: center; /* Center the text */
 }
 
 /* Add spacing below the countdown */
