--- a/CSS/About.css
+++ b/CSS/About.css
@@ -1,7 +1,7 @@
 /* General Styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0; /* Lys bakgrunn for bedre kontrast */
+    background-color: black; /* Lys bakgrunn for bedre kontrast */
 }
 
 #main {
