--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -12,7 +12,7 @@ body {
     background-position: center;
     backdrop-filter: blur(15px);
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("../Images/Background.png");
+    background-image: url("/Images/Background.png");
 }
 
 body::-webkit-scrollbar {
