--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -12,6 +12,7 @@ body {
     background-position: center;
     backdrop-filter: blur(15px);
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/Images/Background1.png");
 }
 
 body::-webkit-scrollbar {
