--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -8,7 +8,7 @@ section#main {
 }
 
 #main h1 {
-    margin-top: 150px;
+    margin-top: 15vh;
     font-size: 3rem;
     margin-bottom: 1rem;
     color: #4aa8c5; /* Set the main text color */
