--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -46,6 +46,7 @@ a {
 
 .button {
     display: flex;
+    flex-grow: 0;
     margin-left: auto;
     column-gap: 10px;
     box-sizing: border-box;
@@ -70,7 +71,7 @@ a {
 }
 
 .logo img {
-    width: 40px;
+    width: 100px;
     border-radius: 5px;
 }
 
@@ -177,6 +178,7 @@ a {
 /* DropDown */
 
 .dropdown_menu {
+    margin-top: 15px;
     position: fixed;
     right: 1rem;
     top: 60px;
@@ -262,6 +264,7 @@ a {
         display: none;
     }
 }
+
 @media (max-width: 992px) {
     .background-header {
         width: 105%;
