--- a/CSS/Error.css
+++ b/CSS/Error.css
@@ -8,7 +8,7 @@ section#main {
 }
 
 #main h1 {
-    color: orange;
+    color: red;
     margin-top: 175px;
     font-size: 3rem;
     margin-bottom: 1rem;
