--- a/CSS/About.css
+++ b/CSS/About.css
@@ -24,6 +24,7 @@ body {
     text-align: center; /* Center the text */
     margin-top: 150px;
     margin-bottom: 1rem;
+    margin-bottom: 10vh;
 }
 
 #main p {
