--- a/CSS/Games.css
+++ b/CSS/Games.css
@@ -8,7 +8,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 90%;
     min-height: 300px; /* Set a minimum height for the card */
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
