--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -113,16 +113,35 @@ h1 {
     }
 
     .countdown {
+
         font-size: small;
     }
 
     .time-unit span {
         font-size: 3vh;
      }
+
+     .time-unit {
+        margin: 0 10px;
+    }
 }
 
 @media (max-width: 550px) {
     .time-unit span {
+        font-size: 2.3vh;
+     }
+
+     .time-unit {
+        margin: 0 8px;
+    }
+}
+
+@media (max-width: 500px) {
+    .time-unit span {
         font-size: 2vh;
      }
+
+     .time-unit {
+        margin: 0 5px;
+    }
 }
